--- a/WebSerwis2/Web.config
+++ b/WebSerwis2/Web.config
@@ -9,7 +9,21 @@
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
+	  <services>
+		  <service name="WebSerwis2.RestService1">
+			  <endpoint address=""
+							binding="webHttpBinding"
+							contract="WebSerwis2.IRestSerwis1"
+							behaviorConfiguration="mojRestEndpointBehavior">
+			  </endpoint>
+		  </service>
+	  </services>
     <behaviors>
+		 <endpointBehaviors>
+			 <behavior name="mojRestEndpointBehavior">
+				 <webHttp helpEnabled="true"/>
+			 </behavior>
+		 </endpointBehaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
